--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -19,12 +19,15 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "leva": "^0.9.34",
+    "maath": "^0.5.2",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-merge-refs": "^2.0.1",
     "three": "^0.150.1",
     "three-stdlib": "^2.21.8",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
