Add dark toggle

--- a/apps/portfolio/tsconfig.json
+++ b/apps/portfolio/tsconfig.json
@@ -23,7 +23,8 @@
     "paths": {
       "@/*": ["./app/*"],
       "@components/*": ["./app/components/*"],
-      "@3d/*": ["./app/3d/*"]
+      "@3d/*": ["./app/3d/*"],
+      "@ui/*": ["./app/components/ui/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
