--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-separator": "^1.0.2",
     "@react-three/drei": "^9.56.27",
     "@react-three/fiber": "^8.11.5",
     "@tabler/icons-react": "^2.5.0",
@@ -16,6 +18,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/three": "^0.149.0",
+    "clsx": "^1.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "leva": "^0.9.34",
@@ -24,6 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.0.1",
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.5",
     "three": "^0.150.1",
     "three-stdlib": "^2.21.8",
     "typescript": "4.9.5",
