Lots of progress, mainly cleaning up person

--- a/apps/portfolio/tsconfig.json
+++ b/apps/portfolio/tsconfig.json
@@ -21,10 +21,10 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./app/*"],
-      "@components/*": ["./app/components/*"],
       "@3d/*": ["./app/3d/*"],
-      "@ui/*": ["./app/components/ui/*"]
+      "@ui/*": ["./app/components/ui/*"],
+      "@components/*": ["./app/components/*"],
+      "@/*": ["./app/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
