--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.2",
     "@react-three/drei": "^9.56.27",
@@ -18,9 +19,11 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/three": "^0.149.0",
+    "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "framer-motion-3d": "^10.2.3",
     "leva": "^0.9.34",
     "maath": "^0.5.2",
     "next": "13.2.1",
@@ -31,6 +34,7 @@
     "tailwindcss-animate": "^1.0.5",
     "three": "^0.150.1",
     "three-stdlib": "^2.21.8",
+    "ts-pattern": "^4.2.1",
     "typescript": "4.9.5",
     "zustand": "^4.3.6"
   },
