--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "framer-motion-3d": "^10.2.4",
+    "immer": "^9.0.19",
     "leva": "^0.9.34",
     "maath": "^0.5.2",
     "next": "13.2.4",
