--- a/apps/portfolio/.eslintrc.json
+++ b/apps/portfolio/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/no-unescaped-entities": "off",
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "react/no-children-prop": "off"
   }
 }
