--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -33,7 +33,7 @@
     "react-merge-refs": "^2.0.1",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
-    "three": "^0.150.1",
+    "three": "0.150.1",
     "three-stdlib": "^2.21.8",
     "ts-pattern": "^4.2.1",
     "typescript": "4.9.5",
