--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^1.3.0",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.2",
     "@react-three/drei": "^9.57.2",
