--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@react-three/drei": "^9.57.2",
     "@react-three/fiber": "^8.12.0",
     "@tabler/icons-react": "^2.10.0",
