✨ Build fucking streets

--- a/apps/portfolio/tsconfig.json
+++ b/apps/portfolio/tsconfig.json
@@ -24,6 +24,7 @@
       "@3d/*": ["./app/3d/*"],
       "@ui/*": ["./app/components/ui/*"],
       "@components/*": ["./app/components/*"],
+      "@public/*": ["./public/*"],
       "@/*": ["./app/*"]
     }
   },
