--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -12,6 +12,7 @@
     "@floating-ui/react-dom": "^1.3.0",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.3",
     "@react-three/drei": "^9.57.2",
@@ -44,6 +45,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "tailwindcss": "^3.2.7"
   }
 }
