--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "gltfjsx": "^6.1.4",
     "prepend-file": "^2.0.1",
+    "prettier": "^2.8.7",
     "rimraf": "^4.4.0",
     "tsx": "^3.12.5"
   }
