--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -30,10 +30,11 @@
     "immer": "^9.0.19",
     "leva": "^0.9.34",
     "maath": "^0.5.2",
-    "next": "13.2.3",
+    "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.0.1",
+    "rust-404": "workspace:^",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
     "three": "0.150.1",
