Add new created file to git worktree

--- a/packages/rust-404/pkg/package.json
+++ b/packages/rust-404/pkg/package.json
@@ -12,8 +12,5 @@
   ],
   "module": "rust_404.js",
   "types": "rust_404.d.ts",
-  "sideEffects": [
-    "./rust_404.js",
-    "./snippets/*"
-  ]
+  "sideEffects": false
 }
