Add resizing to rust-404

--- a/packages/rust-404/pkg/package.json
+++ b/packages/rust-404/pkg/package.json
@@ -12,5 +12,8 @@
   ],
   "module": "rust_404.js",
   "types": "rust_404.d.ts",
-  "sideEffects": false
+  "sideEffects": [
+    "./rust_404.js",
+    "./snippets/*"
+  ]
 }
