Add wasm-pack webpack plugin and small game changes

--- a/packages/rust-404/pkg/package.json
+++ b/packages/rust-404/pkg/package.json
@@ -5,15 +5,12 @@
   ],
   "version": "0.1.0",
   "files": [
-    "rust_404_bg.wasm",
-    "rust_404.js",
-    "rust_404_bg.js",
-    "rust_404.d.ts"
+    "index_bg.wasm",
+    "index.js",
+    "index_bg.js",
+    "index.d.ts"
   ],
-  "module": "rust_404.js",
-  "types": "rust_404.d.ts",
-  "sideEffects": [
-    "./rust_404.js",
-    "./snippets/*"
-  ]
+  "module": "index.js",
+  "types": "index.d.ts",
+  "sideEffects": false
 }
