--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -1,53 +1,55 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@floating-ui/react-dom": "^1.3.0",
-    "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-popover": "^1.0.5",
-    "@radix-ui/react-scroll-area": "^1.0.3",
-    "@radix-ui/react-separator": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.3",
-    "@react-three/drei": "^9.57.2",
-    "@react-three/fiber": "^8.12.0",
-    "@tabler/icons-react": "^2.10.0",
-    "@types/node": "18.14.1",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@types/three": "^0.149.0",
-    "class-variance-authority": "^0.4.0",
-    "clsx": "^1.2.1",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.1",
-    "framer-motion-3d": "^10.2.4",
-    "immer": "^9.0.19",
-    "leva": "^0.9.34",
-    "maath": "^0.5.2",
-    "next": "13.4.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-merge-refs": "^2.0.1",
-    "rust-404": "workspace:^",
-    "tailwind-merge": "^1.10.0",
-    "tailwindcss-animate": "^1.0.5",
-    "three": "0.150.1",
-    "three-stdlib": "^2.21.8",
-    "ts-pattern": "^4.2.1",
-    "typescript": "4.9.5",
-    "zustand": "^4.3.6"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "tailwindcss": "^3.2.7"
-  }
+	"name": "portfolio",
+	"version": "0.1.0",
+	"type": "module",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@floating-ui/react-dom": "^1.3.0",
+		"@radix-ui/react-dialog": "^1.0.3",
+		"@radix-ui/react-popover": "^1.0.5",
+		"@radix-ui/react-scroll-area": "^1.0.3",
+		"@radix-ui/react-separator": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.3",
+		"@react-three/drei": "^9.57.2",
+		"@react-three/fiber": "^8.12.0",
+		"@tabler/icons-react": "^2.10.0",
+		"@types/node": "18.14.1",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
+		"@types/three": "^0.149.0",
+		"class-variance-authority": "^0.4.0",
+		"clsx": "^1.2.1",
+		"eslint": "8.35.0",
+		"eslint-config-next": "13.2.1",
+		"framer-motion-3d": "^10.2.4",
+		"immer": "^9.0.19",
+		"leva": "^0.9.34",
+		"maath": "^0.5.2",
+		"next": "13.4.5",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-merge-refs": "^2.0.1",
+		"rust-404": "workspace:^",
+		"tailwind-merge": "^1.10.0",
+		"tailwindcss-animate": "^1.0.5",
+		"three": "0.150.1",
+		"three-stdlib": "^2.21.8",
+		"ts-pattern": "^4.2.1",
+		"typescript": "4.9.5",
+		"zustand": "^4.3.6"
+	},
+	"devDependencies": {
+		"@wasm-tool/wasm-pack-plugin": "^1.7.0",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.7",
+		"prettier-plugin-organize-imports": "^3.2.2",
+		"tailwindcss": "^3.2.7"
+	}
 }
