--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -9,6 +9,10 @@
 		"start": "next start",
 		"lint": "next lint"
 	},
+	"prettier": {
+		"tabWidth": 2,
+		"useTabs": false
+	},
 	"dependencies": {
 		"@floating-ui/react-dom": "^1.3.0",
 		"@radix-ui/react-dialog": "^1.0.3",
