--- a/packages/rust-404/pkg/package.json
+++ b/packages/rust-404/pkg/package.json
@@ -12,8 +12,5 @@
   ],
   "module": "index.js",
   "types": "index.d.ts",
-  "sideEffects": [
-    "./index.js",
-    "./snippets/*"
-  ]
+  "sideEffects": false
 }
