--- a/apps/portfolio/tsconfig.json
+++ b/apps/portfolio/tsconfig.json
@@ -21,11 +21,12 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@3d/*": ["./app/3d/*"],
-      "@ui/*": ["./app/components/ui/*"],
-      "@components/*": ["./app/components/*"],
+      "@3d/*": ["./components/3d/*"],
+      "@ui/*": ["./components/ui/*"],
+      "@content/*": ["./content/*"],
+      "@components/*": ["./components/*"],
       "@public/*": ["./public/*"],
-      "@/*": ["./app/*"]
+      "@app/*": ["./app/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
