--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^1.3.0",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-scroll-area": "^1.0.3",
@@ -23,6 +24,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.57.2",
     "@react-three/fiber": "^8.12.0",
     "@tabler/icons-react": "^2.10.0",
@@ -42,6 +44,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.0.1",
+    "react-use-measure": "^2.1.1",
     "rust-404": "workspace:*",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
@@ -52,6 +55,7 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.7",
     "@wasm-tool/wasm-pack-plugin": "^1.7.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
