--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-portal": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -44,6 +45,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.0.1",
+    "react-remove-scroll": "^2.5.6",
     "react-use-measure": "^2.1.1",
     "rust-404": "workspace:*",
     "tailwind-merge": "^1.10.0",
