--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -37,6 +37,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "fast-equals": "^5.0.1",
     "framer-motion-3d": "^10.2.4",
     "immer": "^9.0.19",
     "leva": "^0.9.34",
