--- a/apps/portfolio/tsconfig.json
+++ b/apps/portfolio/tsconfig.json
@@ -26,7 +26,8 @@
       "@content/*": ["./content/*"],
       "@components/*": ["./components/*"],
       "@public/*": ["./public/*"],
-      "@app/*": ["./app/*"]
+      "@app/*": ["./app/*"],
+      "@/*": ["./*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
