--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "type": "module",
   "scripts": {
+    "generate": "tsx ./scripts/generate-model.ts",
     "parse-models": "tsx ./scripts/parse-models.ts",
     "dev": "pnpm --filter portfolio run dev"
   },
@@ -14,10 +15,14 @@
   "devDependencies": {
     "@expo/spawn-async": "^1.7.2",
     "@shopify/screenshot-glb": "^1.9.1",
+    "chalk": "^5.3.0",
     "gltfjsx": "^6.1.4",
+    "json5": "^2.2.3",
     "prepend-file": "^2.0.1",
     "prettier": "^2.8.7",
     "rimraf": "^4.4.0",
-    "tsx": "^3.12.5"
+    "tsx": "^3.12.5",
+    "typescript": "4.9.5",
+    "zod": "^3.21.4"
   }
 }
