--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -29,6 +29,7 @@
     "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.77.4",
     "@react-three/fiber": "^8.12.0",
+    "@react-three/postprocessing": "^2.14.13",
     "@tabler/icons-react": "^2.10.0",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
@@ -65,6 +66,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2"
   }
 }
