--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -61,8 +61,10 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.7",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@wasm-tool/wasm-pack-plugin": "^1.7.0",
     "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-organize-imports": "^3.2.2",
