--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -46,6 +46,7 @@
     "leva": "^0.9.34",
     "maath": "^0.5.2",
     "next": "13.4.5",
+    "proxy-memoize": "^2.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.0.1",
