--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -36,6 +36,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/three": "^0.149.0",
+    "bright": "^0.8.4",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "eslint": "8.35.0",
