--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -39,6 +39,7 @@
     "bright": "^0.8.4",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "fast-equals": "^5.0.1",
@@ -63,16 +64,22 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@mdx-js/react": "^2.3.0",
     "@next/bundle-analyzer": "^13.4.7",
+    "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.3",
     "@wasm-tool/wasm-pack-plugin": "^1.7.0",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
+    "gray-matter": "^4.0.3",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "remark-gfm": "^3.0.1",
+    "remark-toc": "^8.0.1",
     "tailwindcss": "^3.3.2",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.2"
